# microdrone-world-model

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  artifacts.lock.json  environment.yml  pyproject.toml
.github/: FUNDING.yml
assist/: __init__.py  pilot.py
datasets/: __init__.py  combine_rollouts.py  generate_rollouts.py  intervention_labels.py  metric_labels.py  search_rollouts.py
docs/: GLOSSARY.md  ONBOARDING.md  RESEARCH-IDEAS.md  REVIEW-2026-07.md  REVIEW-2026-07.zh-TW.md  ROADMAP.md  START-HERE.zh-TW.md  TDD-FLIGHT.md  TRAINING-A-SKILL.md  embedded_budget.md  safety.md  sim_to_real.md  vision.md
eval/: assist_episode.py  calibrate_heads.py  diagnose_nroom_doorway.py  diagnose_v3_collisions.py  episode.py  eval_alt_detect.py  eval_alt_search.py  eval_arena_ceiling.py  eval_assist_gate.py  eval_beam_ablation.py  eval_beam_latency.py  eval_beam_noise.py  eval_closed_loop.py  eval_clutter_governor.py  eval_coverage.py  eval_coverage_gate.py  eval_dense_probe.py  eval_dense_recal.py  eval_dodge_ceiling.py  eval_doorway_detect.py  eval_duel_plots.py  eval_evidence.py  eval_gap_phase.py  eval_hard_worlds.py  eval_head_calibration.py  eval_height.py  eval_indoor_gate.py  eval_inflight_detect.py  eval_int8_parity.py  eval_integration.py  eval_latency_budget.py  eval_low_hover.py  eval_oracle_memory.py  eval_person_detect.py  eval_person_pose.py  eval_policy_cells.py  eval_pose_walk.py  eval_pred_ab.py  eval_reactive_vs_wm.py  eval_results_figures.py  (+16 more)
hardware/: README.md
planner/: action_set.py  authority.py  (+6 more)
(+399 files in other folders)
