[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "microdrone-world-model"
version = "0.1.0"
description = "A tiny latent world-model stack for micro-drones"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["world_model", "planner", "sim", "datasets", "eval", "scripts"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
