[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "microdrone-world-model"
version = "0.7.0"
description = "A tiny latent world-model stack for micro-drones"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
# auto-discover every package (skills.* grow per campaign; the Indoor
# Active Search Track adds mapping/perception/search) — a hand-listed
# set silently dropped new skills from non-editable installs
include = [
    "world_model*",
    "planner*",
    "sim*",
    "datasets*",
    "eval*",
    "scripts*",
    "skills*",
    "mapping*",
    "perception*",
    "search*",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
